   sends these events to the "security" logger level.  Currently, AMI is the only
   Asterisk component that reports security events.  However, SIP support will be
   coming soon.  For more information on the security events framework, see the
   "Security Events" chapter of the included documentation - doc/tex/asterisk.pdf.

Miscellaneous
-------------
 * The transmit_silence_during_record option in asterisk.conf.sample has been removed.
   Now, in order to enable transmitting silence during record the transmit_silence
   option should be used.  transmit_silence_during_record remains a valid option, but
   defaults to the behavior of the transmit_silence option.
 * Addition of the Unit Test Framework API for managing registration and execution
   of unit tests with the purpose of verifying the operation of C functions.
 * SendText is now implemented in chan_gtalk and chan_jingle. It will simply send
   XMPP text messages to the remote JID.
 * Modules.conf has a new option - "require" - that marks a module as critical for 
   the execution of Asterisk.
   If one of the required modules fail to load, Asterisk will exit with a return
   code set to 2.
 * An 'X' option has been added to the asterisk application which enables #exec support.
   This allows #exec to be used in asterisk.conf.
 * jabber.conf supports a new option auth_policy that toggles auto user registration.
 * A new lockconfdir option has been added to asterisk.conf to protect the
   configuration directory (/etc/asterisk by default) during reloads.
 * The parkeddynamic option has been added to features.conf to enable the creation
   of dynamic parkinglots.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.